<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.activity.StudentControlActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/text_view_student_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_function_indicator"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/full_name" />

        <TextView
            android:id="@+id/text_view_function_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/function_indicator" />

    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_student_control"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:listitem="@layout/student_control_session_item" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_save_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="32dp"
            android:text="@string/save"
            app:icon="@drawable/ic_save" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.appcompat.widget.LinearLayoutCompat>